--- a/main.ipynb
+++ b/main.ipynb
@@ -96,8 +96,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "08a704ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1 importacion del DataSet\n",
+    "\n",
+    "import pandas as pd\n",
+    "import matplotlib as plt\n",
+    "\n",
+    "df = pd.read_csv(\"ventas.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e263b4aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 105 entries, 0 to 104\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   ID_Venta          105 non-null    int64  \n",
+      " 1   Nombre_Cliente    105 non-null    object \n",
+      " 2   Apellido_Cliente  105 non-null    object \n",
+      " 3   Fecha             105 non-null    object \n",
+      " 4   Producto          101 non-null    object \n",
+      " 5   Cantidad          105 non-null    int64  \n",
+      " 6   Precio_Unitario   92 non-null     float64\n",
+      " 7   Total_Venta       92 non-null     float64\n",
+      " 8   Metodo_Pago       94 non-null     object \n",
+      " 9   Region            100 non-null    object \n",
+      "dtypes: float64(2), int64(2), object(6)\n",
+      "memory usage: 8.3+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ID_Venta             0\n",
+       "Nombre_Cliente       0\n",
+       "Apellido_Cliente     0\n",
+       "Fecha                0\n",
+       "Producto             4\n",
+       "Cantidad             0\n",
+       "Precio_Unitario     13\n",
+       "Total_Venta         13\n",
+       "Metodo_Pago         11\n",
+       "Region               5\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2 Exploracion de Datos\n",
+    "\n",
+    "#Visualizar las primeras y ultimas filas\n",
+    "df.head()\n",
+    "df.tail()\n",
+    "\n",
+    "#obtener informacion del df\n",
+    "df.info()\n",
+    "\n",
+    "#contar valores nulos\n",
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe4b219f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -119,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
