termine el 4 y empece el 5

--- a/main.ipynb
+++ b/main.ipynb
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "d15a5450",
    "metadata": {},
    "outputs": [
@@ -699,30 +699,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                             Cantidad  Total_Venta\n",
-      "Region Producto                                                   \n",
-      "Este   Auriculares Bluetooth                      2.0       180.00\n",
-      "       Auriculares Deportivos                     1.0        75.50\n",
-      "       Auriculares In-Ear                         2.0        99.98\n",
-      "       Auriculares con Cancelación de Ruido       1.0       180.50\n",
-      "       Impresora Fotográfica                      1.0       185.20\n",
-      "...                                               ...          ...\n",
-      "Sur    Soporte para Monitor                       1.0        25.00\n",
-      "       Tablet Gráfica                             1.0       280.00\n",
-      "       Tarjeta Gráfica                            1.0       450.50\n",
-      "       Webcam Básica                              1.0        29.95\n",
-      "       Webcam HD                                  1.0        45.50\n",
-      "\n",
-      "[80 rows x 2 columns]\n"
+      "        Cantidad  Total_Venta\n",
+      "Region                       \n",
+      "Este    1.076923   315.177124\n",
+      "Norte   1.047619   375.409772\n",
+      "Oeste   1.481481   146.940483\n",
+      "Sur     1.153846   170.978094\n"
      ]
     }
    ],
    "source": [
     "#Calcular estadisticas especificas\n",
-    "Calculo_especifico = df.groupby([\"Region\",\"Producto\"])[[\"Cantidad\", \"Total_Venta\"]].mean()\n",
+    "Calculo_especifico = df.groupby([\"Region\"])[[\"Cantidad\", \"Total_Venta\"]].mean()\n",
     "\n",
     "print(Calculo_especifico)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8b7ed92",
+   "metadata": {},
+   "source": [
+    "### 5. Visualización de los Datos con Matplotlib\n",
+    "\n",
+    "En esta sección, deben utilizar la librería Matplotlib para crear **UNA** visualización que permitan comprender mejor los datos de ventas.El grafico es a elección, puede crear **UNO** de los siguientes: histogramas, diagramas de dispersión, gráficos de barras y graficos de torta."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be423baa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
