Termine el punto 6 y el examen

--- a/main.ipynb
+++ b/main.ipynb
@@ -763,7 +763,81 @@
    "cell_type": "markdown",
    "id": "73d518dd",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 6. Exportación a Archivo SQLite\n",
+    "\n",
+    "Finalmente, deben utilizar la funcionalidad de Pandas para guardar el DataFrame procesado en una base de datos SQLite. Deben hacer una conexión y hacer una consulta para ver si los datos fueron cargados correctamente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "15ec382b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ID_Venta Nombre_Cliente Apellido_Cliente       Fecha  \\\n",
+      "0           1            Ana           García  01-05-2024   \n",
+      "1           2         Carlos            López  2024-01-08   \n",
+      "2           3          sofía         martínez  2024-01-12   \n",
+      "3           4          pedro        rodríguez  2024-01-15   \n",
+      "4           5          Laura          Sánchez  18-01-2024   \n",
+      "..        ...            ...              ...         ...   \n",
+      "100       101        Agustín           Torres  2024-10-08   \n",
+      "101       102         Camila             Vega  2024-10-11   \n",
+      "102       103           Juan            Rojas  2024-10-15   \n",
+      "103       104          Lucía            Silva  2024-10-18   \n",
+      "104       105          mateo             luna  2024-10-22   \n",
+      "\n",
+      "                  Producto  Cantidad  Precio_Unitario  Total_Venta  \\\n",
+      "0                   Laptop         1          1200.50      1200.50   \n",
+      "1        Mouse Inalámbrico         2            25.75        51.50   \n",
+      "2         Teclado Mecánico         1            75.99        75.99   \n",
+      "3      Monitor 24 pulgadas         1              NaN          NaN   \n",
+      "4    Auriculares Bluetooth         1            99.95        99.95   \n",
+      "..                     ...       ...              ...          ...   \n",
+      "100         Pen Drive 64GB         4             8.75        35.00   \n",
+      "101          Laptop Ligera         1              NaN      1180.00   \n",
+      "102                   None         1            48.99          NaN   \n",
+      "103      Teclado Bluetooth         1            78.20        78.20   \n",
+      "104   Monitor para Oficina         1             2.00       210.50   \n",
+      "\n",
+      "                Metodo_Pago Region  \n",
+      "0        Tarjeta de Crédito  Norte  \n",
+      "1                  Efectivo    Sur  \n",
+      "2    Transferencia Bancaria   Este  \n",
+      "3         Tarjeta de Débito  Oeste  \n",
+      "4        Tarjeta de Crédito  Norte  \n",
+      "..                      ...    ...  \n",
+      "100       Tarjeta de Débito  Oeste  \n",
+      "101      Tarjeta de Crédito  Norte  \n",
+      "102                Efectivo    Sur  \n",
+      "103  Transferencia Bancaria   Este  \n",
+      "104       Tarjeta de Débito  Oeste  \n",
+      "\n",
+      "[105 rows x 10 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "\n",
+    "#crea la conexion\n",
+    "conn = sqlite3.connect(\"ventas.db\")\n",
+    "\n",
+    "#Exporta el df\n",
+    "df.to_sql(\"ventas\", conn,if_exists=\"replace\", index = False)\n",
+    "\n",
+    "#consulta para saber si se creo correctamente\n",
+    "consulta = pd.read_sql(\"SELECT * FROM ventas\", conn)\n",
+    "print(consulta)\n",
+    "\n",
+    "#cierra la conexion\n",
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
